--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,17 @@ on:
     branches: [ master ]
 
 jobs:
+  golangci:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
+        with:
+          version: latest
+
 
   build:
     runs-on: ubuntu-latest
