--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,5 +17,5 @@ brews:
     homepage: "https://github.com/elnoro/foxyshot"
     description: "A lightweight tool to upload MacOS screenshots to an S3-compatible provider"
     service: |
-      run [opt_bin/"foxyshot", "run"]
+      run [opt_bin/"foxyshot", "run", "-logfile", opt_prefix/"foxyshot.log"]
 
