--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: build
+name: go
 
 on:
   push:
@@ -7,29 +7,25 @@ on:
     branches: [ main ]
 
 jobs:
-  lint:
+  golangci:
+    name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
+          cache: false
       - uses: actions/checkout@v3
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: v1.52.2
+          args: --timeout=5m
+          skip-cache: false
 
+      - name: lint/deps
+        run: make lint/deps
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.20
-
-    - name: Test
-      run: make test/run
+      - name: test
+        run: make test/run
